--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,10 @@
 .App {
   text-align: center;
+  background-color:#10e7cb;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+ 
 }
 
 .App-logo {
@@ -14,14 +19,14 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color:rgba(117, 120, 223, 0.835) 100%;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: rgba(5,13,228,0.835171568627451) 100%;
 }
 
 .App-link {
