--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,6 @@
 .App {
   text-align: center;
-  background-color:#10e7cb;
-  min-height: 100vh;
+  background-image: radial-gradient(circle, rgba(172,217,164,1) 0%, rgba(153,148,233,1) 100%);
   display: flex;
   flex-direction: column;
  
